--- a/music-player/index.html
+++ b/music-player/index.html
@@ -6,7 +6,7 @@
     <title>Music Card</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="music.css">
 </head>
 <body>
     <div class="background-image" id="backgroundImage"></div>
@@ -45,6 +45,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="music.js"></script>
 </body>
 </html>
