--- a/music-player/index.html
+++ b/music-player/index.html
@@ -18,10 +18,16 @@
                 <p id="cardText" class="card-text"></p>
                 <div class="d-flex flex-column align-items-center">
                     <div class="d-flex align-items-center mb-3">
+                        <div class="d-flex align-items-center mb-3 seekbar-container">
+                        </div><div class="d-flex align-items-center mb-3 seekbar-container">
+                            <input type="range" id="seekBar" min="0" value="0" style="width: 260px;">
+                        </div>
+     </div>
+                    <div class="d-flex align-items-center mb-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-volume-down-fill me-2" viewBox="0 0 16 16">
                             <path d="M9 4a.5.5 0 0 0-.812-.39L5.825 5.5H3.5A.5.5 0 0 0 3 6v4a.5.5 0 0 0 .5.5h2.325l2.363 1.89A.5.5 0 0 0 9 12zm3.025 4a4.5 4.5 0 0 1-1.318 3.182L10 10.475A3.5 3.5 0 0 0 11.025 8 3.5 3.5 0 0 0 10 5.525l.707-.707A4.5 4.5 0 0 1 12.025 8"/>
                         </svg>
-                        <input type="range" id="volumeControl" min="0" max="1" step="0.1" value="1">
+                        <input type="range" id="volumeControl" min="0" max="1" step="0.1" value="1" class="w-100">
                     </div>
                     <div class="d-flex justify-content-between w-100">
                         <a href="#" onclick="previousCard()" class="btn btn-secondary me-2">
