--- a/Esercizio Tomato/index.html
+++ b/Esercizio Tomato/index.html
@@ -16,7 +16,7 @@
     <input type="number" id="studyTime" name="studyTime" min="1" required>
     <label for="pauseTime">Break Time:</label>
     <input type="number" id="pauseTime" name="pauseTime" min="1" required>
-    <label for="cycles">Cycles:</label>
+    <label for="cycles">Sessions:</label>
     <input type="number" id="cycles" name="cycles" min="1" required>
    </div>
     <div class="startbutton">
@@ -25,9 +25,9 @@
   </form>
 
   <div id="clock">
-    <div class="timer" id="timerDisplay">00:00
-    </div>
     <div id="textOnClock">get started</div>
+    <div class="timer" id="timerDisplay">00:00</div>
+    <div id="cycleCounter">Session: 0/0</div>
   </div>
 
 
